# kyaraben

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.cli-e2e  Containerfile.dev  Containerfile.electron-build  Containerfile.electron-e2e  Containerfile.nix-e2e  Containerfile.sandbox  Containerfile.tauri-build  Containerfile.tauri-e2e  EMULATORS.md  EMULATOR_CONFIG_REFERENCE.md  FILESYSTEM.md  LICENSE  MODEL.md  MULTI_EMULATOR_ANALYSIS.md  MULTI_EMULATOR_DESIGN.md  MVP.md  Makefile  PITCH.md  README.md  REVIEW-ARCHITECTURE.md  REVIEW-CODE-QUALITY.md  REVIEW-DECISIONS.md  REVIEW-MODEL.md  REVIEW-MVP.md  REVIEW-TESTING.md  SYNC.md  SYNC_REVIEW.md  SYNC_SECURITY_REVIEW.md  TASKS.md  (+11 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
deploy/: Caddyfile  Containerfile  entrypoint.sh
docs/: headless-server-plan.md  pre-launch-audit.md  steamdeck-emulator-feedback.md  steamdeck-testing-round2.md
integrations/: README.md
nix/: HOME-MANAGER.md  hm-module.nix
plans/: controller-support-plan.md  sync-feature-analysis.md  sync-progress.md  sync-redesign.md
protocol/: schema.json
relay/: Containerfile  README.md  go.mod
scripts/: build-release-cli.sh  build-sidecar.sh  download-nix-portable.sh  fix-appimage.sh  run-cli-e2e.sh  run-e2e-tests.sh  run-electron-e2e.sh  run-nix-e2e.sh  run-tauri-e2e.sh  run-ui-e2e.sh  test-container.sh  test-emulators.sh
site/: .prettierrc  (+6 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
(+611 files in other folders)
