[package]
name = "kyaraben-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
once_cell = "1"
which = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
